// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should match snapshot 1`] = `
<scale-toast>
  <mock:shadow-root>
    <style>
      .toast {
  width: 400px;
  display: flex;
  opacity: 0;
  z-index: 1;
  position: fixed;
  background: #fff;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.toast__body {
  padding: 1rem;
}
.toast__header {
  margin: 0;
  display: flex;
  padding: 1rem;
  border-bottom: 1px solid #ccc;
  justify-content: space-between;
  font-size: 1.25rem;
}
.toast__header a {
  cursor: pointer;
}
.toast__header small {
  margin-top: 5px;
  margin-left: 120px;
  font-size: 0.75rem;
}
.toast__progress {
  left: 0;
  bottom: 0;
  height: 2px;
  display: block;
  overflow: hidden;
  position: absolute;
  background: red;
}
    </style>
    <style>
      @keyframes fadeIn {
      from {
        opacity: 0;
        top: -0px;
      }
      to {
        opacity: 1;
        top: 12px;
      }
    }

    @keyframes fadeOut {
      from {
        opacity: 1;
        top: 12px;
      }
      to {
        opacity: 0;
        top: -0px;
      }
    }
    </style>
    <style></style>
    <div class="toast--show toast">
      <div class="toast__header">
        <slot name="header"></slot>
        header
        <small></small>
        <a>
          <span aria-hidden="true">
            ×
          </span>
        </a>
      </div>
      <div class="toast__body">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Toast message
</scale-toast>
`;

exports[`Toast should match snapshot when opened 1`] = `
<scale-toast opened="">
  <mock:shadow-root>
    <style>
      .toast {
  width: 400px;
  display: flex;
  opacity: 0;
  z-index: 1;
  position: fixed;
  background: #fff;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.toast__body {
  padding: 1rem;
}
.toast__header {
  margin: 0;
  display: flex;
  padding: 1rem;
  border-bottom: 1px solid #ccc;
  justify-content: space-between;
  font-size: 1.25rem;
}
.toast__header a {
  cursor: pointer;
}
.toast__header small {
  margin-top: 5px;
  margin-left: 120px;
  font-size: 0.75rem;
}
.toast__progress {
  left: 0;
  bottom: 0;
  height: 2px;
  display: block;
  overflow: hidden;
  position: absolute;
  background: red;
}
.toast--show {
  top: 12px;
  right: 12px;
  opacity: 1;
  animation: fadeIn 0.5s ease-in-out;
}
.toast--hide {
  top: -0px;
  right: 12px;
  opacity: 0;
  animation: fadeOut 0.5s ease-in-out;
}
    </style>
    <style>
      @keyframes fadeIn {
      from {
        opacity: 0;
        top: -0px;
      }
      to {
        opacity: 1;
        top: 12px;
      }
    }

    @keyframes fadeOut {
      from {
        opacity: 1;
        top: 12px;
      }
      to {
        opacity: 0;
        top: -0px;
      }
    }
    </style>
    <style></style>
    <div class="toast--show toast">
      <div class="toast__header">
        <slot name="header"></slot>
        header
        <small></small>
        <a>
          <span aria-hidden="true">
            ×
          </span>
        </a>
      </div>
      <div class="toast__body">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-toast>
`;
